# guard

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  SECURITY.md  SKILL.md  _typos.toml  justfile  pyproject.toml  vulture_whitelist.py
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  bypass.yml  config.yml  false-positive.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  plugin-install.yml  release-cut.yml  release.yml  scorecard.yml
.semgrep/rules/: no-prefix-predicate-in-readonly.yml  no-startswith-in-predicate-field.yml  test-hygiene.yml
commands/: diff.md  noisy.md  silent.md  status.md  test.md  trace.md
docs/: JSONL_FORMAT.md  anti-patterns.md  dangerous-commands.md  hooks-reference.md  output-format.md
hooks/: hooks.json
src/guard/: __init__.py  __main__.py  _output_store.py  _safe_io.py  _status.py  _utils.py  allowlist.py  cli.py  migrate_log.py  registry.py
src/guard/hooks/: __init__.py  _admin_specs.py  _registry.py  agent_output_guard.py  bash_command_validator.py  chrome_safety_validator.py  commit_message_validator.py  credential_check.py  git_c_validator.py  protected_files.py  subagent_scope.py
tests/: _helpers.py  conftest.py  test_allowlist.py  test_hook_registry.py  test_jsonl_schema.py  test_migrate_log.py  test_no_dead_exports.py  test_output_store.py  test_registry.py  test_safe_io.py  test_smoke.py  test_status_cli.py  test_utils.py  test_version_consistency.py
tests/cli/: __init__.py  test_cli.py  test_cli_allowlist.py
tests/hooks/: test_agent_output_guard.py  test_bash_command_validator.py  test_chrome_safety_validator.py  test_commit_message_validator.py  test_credential_check.py  test_credential_check_path_signal.py  test_git_c_validator.py  test_protected_files.py  test_protected_files_extension.py  test_protected_files_extractor_coverage.py  test_subagent_scope.py
tests/integration/: aws_catalog_smoke_corpus.txt  test_admin_default_deny.py  test_admin_env_overrides.py  test_admin_forbidden_flags.py  test_admin_forbidden_subcommands.py  test_admin_red_team_shapes.py  test_admin_specs_invariants.py  test_admin_unknown_flags.py  test_allowlist_integration.py  test_autonomous_mode.py  test_aws_bypass_smoke.py  test_bypass_regressions.py  test_hardening.py  test_heredoc_bypass.py  test_jsonl_contract.py  test_orchestration_destruction.py  test_plugin_e2e.py  test_plugin_manifests.py  test_redteam_matchers.py  test_registry_wiring.py  test_stdin_device_bypass.py  test_strict_mode.py  test_synth_matchers_coverage.py  test_validators_integration.py
tests/static/: test_semgrep_rules.py
tests/static/fixtures/: legitimate_startswith.py  prefix_predicate_violation.py
tests/unit/: test_admin_deny_body.py  test_admin_forbidden_flag.py  test_admin_internals_coverage.py  test_admin_sensitive_env.py  test_format_deny_reason.py  test_ops_primitives.py  test_unknown_flags.py
