[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guard"
version = "0.0.0"
description = "Stdlib-only safety hooks plugin for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "TracineHQ contributors" }]
keywords = ["claude-code", "claude-code-plugin", "safety", "hooks", "guardrails"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[tool.hatch.build.targets.wheel]
packages = ["src/guard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ISC001"]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "ANN", "D"]
"src/guard/__init__.py" = ["D104"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/guard"]
