[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracine-guard"
version = "1.0.0rc1"
description = "Stdlib-only safety hooks plugin for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "TracineHQ contributors" }]
keywords = ["claude-code", "claude-code-plugin", "safety", "hooks", "guardrails"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Shells",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=5",
  "pre-commit>=3.7",
  "ruff>=0.15.12",
  "mypy>=1.20.2",
  "vulture>=2.13",
]

[project.scripts]
guard = "guard.cli:main"

[project.urls]
Homepage = "https://github.com/tracinehq/guard"
Source = "https://github.com/tracinehq/guard"
Issues = "https://github.com/tracinehq/guard/issues"
Changelog = "https://github.com/tracinehq/guard/blob/main/CHANGELOG.md"
Documentation = "https://github.com/tracinehq/guard/tree/main/docs"
"Security Policy" = "https://github.com/tracinehq/guard/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["src/guard"]

[tool.coverage.run]
branch = true
source = ["src/guard"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ISC001"]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",      # asserts are the point of pytest
  "PLR2004",   # magic numbers in test fixtures are normal
  "ANN",       # don't require type annotations on test fns
  "D",         # don't require docstrings on test fns
  "S603",      # subprocess-without-shell: every hook test spawns the hook script
  "S108",      # /tmp string literals are payloads, not real fs operations
  "PLC0415",   # local imports inside test fns / lazy hook imports
  "N802",      # snake_case test names sometimes mirror spec terms (test_dash_F_short_form)
  "ARG001",    # unused args used as pytest.param ids
  "ARG002",    # side-effect-only pytest fixtures on test methods
  "PTH111",    # os.path used in payload strings, not real path objects
  "E402",      # grouped imports below header sections are intentional
]
"src/guard/__init__.py" = ["D104"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/guard"]

[tool.vulture]
paths = ["src/guard", "tests", "vulture_whitelist.py"]
exclude = []
min_confidence = 80
ignore_decorators = ["@pytest.fixture", "@pytest.mark.parametrize"]

[tool.bandit]
exclude_dirs = ["tests", "dist", "build"]
skips = []
